Flex  wrap fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,7 +50,7 @@ div#root {
     font-weight: 500;
     width: 100%;
     padding: 11px;
-    max-width: 400px;
+    max-width: 450px;
     transition: max-width 0.4s, color 0.5s;
 
     .menubar {
@@ -65,15 +65,17 @@ div#root {
 }
 
 .leftpane {
-    width: 400px;
+    width: 450px;
     height: 100vh;
     float: left;
     background-color: #1c1d1f;
     padding: 0 25px;
+    overflow: auto;
+    /* padding-top: 220px;*/
 }
 
 .rightpane {
-    width: calc(100% - 400px);
+    width: calc(100% - 450px);
     float: left;
 }
 
@@ -246,7 +248,7 @@ div#root {
         z-index: 1000;
         width: 100%;
         transition: transform 0.5s;
-        overflow: hidden;
+        // overflow: hidden;
         transform: translate(-100%);
 
         &.active {
@@ -308,7 +310,7 @@ div#root {
     .leftCarousel {
         align-items: center;
         .carousel-pane {
-            max-width: 400px;
+            max-width: 450px;
             min-width: 350px;
         }
     }
